# workspacerc

./: .gitignore  README.md  setup.sh
cppproj/cmake/: third_party.cmake
cppproj/src/common/: util.h
cxxproj/: .gitignore  CMakeLists.txt
cxxproj/cmake/: proj.cmake
cxxproj/src/: main.cc
cxxproj/src/common/: util.cc
git/: install.sh
libs/python/: reader.py
tools/: install.sh  platform.sh  setup.sh  util.sh
vim/: .vimrc  install.sh  setup.sh
vim/.vim/: .netrwhist
zsh/: .zshrc  install.sh  setup.sh
